syntax = "proto3";
package schedule_golf.authentication.v1alpha1;

import "google/api/annotations.proto";

service AuthenticatorService {
    rpc CreateNewUser (CreateNewUserRequest) returns (CreateNewUserResponse);
    rpc GetRefreshToken (GetRefreshTokenRequest) returns (GetRefreshTokenResponse);
}

message CreateNewUserRequest {
    string user_id = 1;
    string company_name = 2;
    string email = 3;
    string password = 4;
    string first_name = 5;
    string last_name = 6;
}

message CreateNewUserResponse {
    string user_id = 1;
    string company_name = 2;
    string email = 3;
    string first_name = 4;
    string last_name = 5;
}

message GetRefreshTokenRequest {}

message GetRefreshTokenResponse{}